# nestasm

./: .gitignore  .gitmodules  Cargo.toml  README.md  STATS.md  index.html  manifest.json  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  vite.config.ts
.cargo/: config.toml
.github/workflows/: bench-native.yml  bench-wasm.yml  deploy_gh_page.yml  wasm.yml
assets/: algorithmWorker-BF6WxmXi.js  algorithmWorker-BUa6m7q8.js  algorithmWorker-BiJAIIbc.js  algorithmWorker-C7vBohiW.js  algorithmWorker-CN6Hi5Yg.js  algorithmWorker-CbaNtO6J.js  algorithmWorker-Cr6ntPJS.js  algorithmWorker-CrzWKQux.js  algorithmWorker-DaK_lac0.js  algorithmWorker-DmSp6Lwv.js  algorithmWorker-DpvWQCgs.js  algorithmWorker-UXpRfCv9.js  algorithmWorker-mfUxh1Ml.js  algorithmWorker-nYqSMyWa.js  algorithmWorker-oby6ULqT.js  algorithmWorker-w9HB_7BB.js  algorithmWorker-ynBX0GLC.js  cancelWorker-B8qn57rR.js  cancelWorker-vE_MDNmu.js  index-B5kVImtx.js  index-BFblKhy5.js  index-BSbj4iU-.js  index-B_Yitnbg.js  index-BqDDspYQ.js  index-Bqbm9m77.js  index-CAGiXvPd.js  index-CTA_tyPC.js  index-CuIOCUdI.js  index-D0s3loqQ.js  index-D1J8H10y.css  index-D22r12nM.js  index-DFp1J8jg.js  index-DGA02eFJ.js  index-DIBUGb-O.js  index-DV0KCKvr.js  index-DVjNOgS9.js  index-DoN5nWBu.css  index-DsVhjm7S.css  index-Dx-djNF2.css  index-GR2y6KRq.js  (+67 more)
public/favicon/: site.webmanifest
results/: benchmark_results_local.csv  benchmark_results_native.csv  benchmark_results_wasm.csv
src/: App.tsx  Enums.tsx
src/components/: Header.tsx  Home.tsx  Input.tsx  InputOverview.tsx  SVGMani.tsx  Solution.tsx
src/interfaces/: interfaces.ts
src/services/: algorithmWorker.ts  cancelWorker.ts  wasmWorker.ts
src/styles/: App.module.css  Header.module.css  Home.module.css  Input.module.css  SVGMani.module.css  Solution.module.css  index.css
tests/: globalSetup.ts  speed-local.spec.ts  speed-remote.spec.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: enums.rs  lbf.rs  lib.rs  logger.rs  sparrow.rs  svg_collision.rs  svg_exporter.rs  terminator.rs
