[workspace]
resolver = "2"
members = [
    "wasm",            
    "jagua-rs/jagua-rs",
    "jagua-rs/lbf",
]

# Copy from ./jagua-rs/Cargo.toml
[workspace.dependencies]
ndarray = "0.16"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
ordered-float = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
itertools = "0.14"
rayon = "1.10"
slotmap = "1.0"
float-cmp = "0.10"
svg = "0.18"
anyhow = "1.0"
fern = "0.7"
clap = { version = "4.5", features = ["derive"] }
test-case = "3.3"
thousands = "0.2.0"
jiff = "0.2"
criterion = "0.6"
document-features = "0.2"
geo-types = "0.7"
geo-buffer = "0.2"
env_logger = "0.11.8"


jagua-rs = { path = "./jagua-rs/jagua-rs"  , features = ["spp", "bpp"] }
lbf = { path = "./jagua-rs/lbf" }
sparrow = {path = "./sparrow", features = ["only_final_svg", "simd"] }

# jagua-rs = { git = "https://github.com/Waterboy1602/jagua-rs_wasm.git", rev = "86820711c22aa8dd2c18adef9298b88c771088d3", features = ["spp", "bpp"] }
# svg_collision = { git = "https://github.com/Waterboy1602/svg_collision_detector.git"}
# sparrow = { git = "https://github.com/Waterboy1602/sparrow_wasm.git", features = ["only_final_svg", "simd"]}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true