[package]
name = "wasm-jagua-rs"
version = "0.1.0"
authors = ["Wannes"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "EventTarget", "MouseEvent", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
anyhow = { version = "1.0" }
log = "0.4"
lazy_static = "1.5"
fern = "0.7"
web-time = "1.1"

getrandom = { version = "0.3", features = ["wasm_js"] }
jagua-rs = { path = "../jagua-rs" , features = ["spp", "bpp"] }
lbf = { path = "../lbf"}
svg_collision = { path = "../svg_collision" }
rand = { version = "0.9" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
