[package]
name = "wasm-jagua-rs"
version = "0.1.0"
authors = ["Wannes"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "EventTarget", "MouseEvent", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
anyhow = { version = "1.0" }
log = "0.4"
lazy_static = "1.5"
fern = "0.7"
web-time = "1.1"
jiff = "0.2"
wasm-bindgen-rayon = "1.3"
once_cell = "1.21.3"

rand = { version = "0.9" }
getrandom = { version = "0.3", features = ["wasm_js"] }

jagua-rs = { workspace = true }
lbf = { workspace = true }
sparrow = { workspace = true }
svg_collision = { workspace = true }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']